# Ansible-Inventory-Render

./: .dccache  .gitignore  .pylintrc  README.md  args.py  pyproject.toml  render.py  reqs.txt  wrappers.py
.github/workflows/: ci.yml
example/: vars.json
examples/: inventory.j2  vars.yml
src/ansible-inventory-render/: render.py
