[project]
authors = [{name = "rz", email = "royzou.rz@gmail.com"}]
dependencies = [
  "PyUtils @ git+https://github.com/R0Y2/PyUtils.git@main",
  "ansible-core==2.16.2",
  "Jinja2==3.1.4",
  "MarkupSafe==2.1.5",
  "packaging==24.0",
  "PyYAML==6.0.1"
]
description = "For Ansible inventory rendering"
name = "ansible-inventory-render"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ansible-inventory-render"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-aarch64"]

[tool.pixi.pypi-dependencies]
ansible-inventory-render = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.11.*"
packaging = "24.0.*"
